crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__with_dogs.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                            5 in the flock
                                                                                                                        
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     0 errored · 0 parked   floc…
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
  ID    NAME        STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME    FOLD        SMIT         
   ██ FLOCK                                                                                                             
  1     api         online           48219    1         -          -       241.0M    1h 26m    edge        -            
  2     cron        online           48233    0         -          -       8.0M      1h 28m    -           -            
  0     web         online           48211    0         -          -       182.0M    1h 25m    edge        -            
   ██ DOGS                                                                                                              
  90    bark        online           90090    0         -          -       -         10m       -           -            
  91    log-rotate  silent           90091    0         -          -       -         10m       -           -            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ SHEEP 91  log-rotate   silent   pid 90091   restarts 0   uptime 10m   cpu -   mem -   fold -   dog adopted /usr/loc…
lambs  not read yet                                                                                                     
out  not reported   │   err  not reported                                                                               
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ BLEATS log-rotate  out then err  from the log files, re-read with each listing                                      
out  rotated /var/log/api/access.log -> access.log.1                                                                    
out  compressed access.log.1 (4.2M -> 380K)                                                                             
out  pruned 2 archives older than 14 days                                                                               
out  next rotation in 6h                                                                                                
                                                                                                                        
q quit   j/k select   / filter   F folds   x stop   R restart   L reload   s settings   e edit   * your… control enabled
